--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "npm run lint && tsc -p . && node bin/index.js",
 		"build": "npm run lint && tsc -p .",
-		"test": "./node_modules/mocha -r ts-node/register tests/**/*.spec.ts",
+		"test": "jest",
 		"lint": "tslint src/**/*.ts && tslint tests/**/*.ts"
 	},
 	"repository": {
@@ -20,12 +20,19 @@
 	},
 	"homepage": "https://github.com/collatedev/request-validator#readme",
 	"devDependencies": {
+		"@types/jest": "^24.0.14",
 		"@types/node": "^11.9.5",
+		"jest": "^24.8.0",
 		"nodemon": "^1.18.10",
+		"ts-jest": "^24.0.2",
 		"ts-node": "^8.0.2",
-		"typescript": "^3.3.3333"
+		"typescript": "^3.5.1"
 	},
 	"dependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/preset-env": "^7.4.5",
+		"@babel/preset-typescript": "^7.3.3",
+		"babel-jest": "^24.8.0",
 		"tslint": "^5.13.0",
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-config-standard": "^8.0.1"
