--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -19,11 +19,10 @@
         "esModuleInterop": true  
     },
     "include": [
-        "src/**/*",
-        "test/**/*",
-        "**/*.spec.ts"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
+        "**/*.spec.ts"
     ]
 }
