--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "pretty": true,
         "sourceMap": true,
         "target": "es6",
+        "lib": ["es2017"],
         "outDir": "./lib",
         "noImplicitAny": true,
         "strictFunctionTypes": true,
