--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "./dist/index.js",
 	"scripts": {
 		"build": "tsc -p ./tsconfig.prod.json",
-		"test": "jest"
+		"test": "jest",
+		"coverage": "jest --coverage"
 	},
 	"repository": {
 		"type": "git",
