--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -17,7 +17,8 @@
 		"strictPropertyInitialization": true,
         "strictNullChecks": true,
         "resolveJsonModule": true,
-        "esModuleInterop": true  
+        "esModuleInterop": true,
+        "declaration": true
     },
     "include": [
         "src/**/*"
