--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc -p ./tsconfig.prod.json",
     "test": "jest",
-    "coverage": "jest --coverage"
+	"coverage": "jest --coverage",
+	"prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
