--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -p ./tsconfig.prod.json",
     "test": "jest",
     "coverage": "jest --coverage",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,12 +26,12 @@
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.0.2",
-    "typescript": "^3.5.1"
-  },
-  "dependencies": {
+    "typescript": "^3.5.1",
     "tslint": "^5.13.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1"
+  },
+  "dependencies": {
   },
   "types": "./lib/index.d.ts",
   "directories": {
